<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".view.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/title_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/medium_dimen"
                    android:textColor="#E64A19" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/short_dimen"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <ImageView
                        android:id="@+id/ivName"
                        android:layout_width="@dimen/medium_dimen"
                        android:layout_height="@dimen/medium_dimen"
                        android:layout_marginStart="@dimen/medium_dimen"
                        android:src="@drawable/ic_baseline_person_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/bluePrimary_color" />

                    <EditText
                        android:id="@+id/etName"
                        style="@style/input_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/srting_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/short_dimen"
                        android:paddingVertical="@dimen/short_dimen"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivName"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/short_dimen"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <ImageView
                        android:id="@+id/ivEmail"
                        android:layout_width="@dimen/medium_dimen"
                        android:layout_height="@dimen/medium_dimen"
                        android:layout_marginStart="@dimen/medium_dimen"
                        android:src="@drawable/email"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/input_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/string_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/short_dimen"
                        android:paddingVertical="@dimen/short_dimen"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivEmail"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/short_dimen"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <ImageView
                        android:id="@+id/ivPassword"
                        android:layout_width="@dimen/medium_dimen"
                        android:layout_height="@dimen/medium_dimen"
                        android:layout_marginStart="@dimen/medium_dimen"
                        android:src="@drawable/password"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/input_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/string_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/short_dimen"
                        android:paddingVertical="@dimen/short_dimen"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPassword"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/short_dimen"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <ImageView
                        android:id="@+id/ivRepassword"
                        android:layout_width="@dimen/medium_dimen"
                        android:layout_height="@dimen/medium_dimen"
                        android:layout_marginStart="@dimen/medium_dimen"
                        android:src="@drawable/rotation_lock"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/bluePrimary_color" />

                    <EditText
                        android:id="@+id/etRepassword"
                        style="@style/input_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/string_comfirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/short_dimen"
                        android:paddingVertical="@dimen/short_dimen"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivRepassword"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvAlreadyHaveAccount"
                    style="@style/text_already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/short_dimen" />

                <TextView
                    style="@style/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/short_dimen" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_side_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBtnBackLogin"
        android:layout_width="@dimen/high_dimen"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:background="@drawable/ic_back_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>