<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".view.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/logo">

                    <TextView
                        style="@style/title_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="5dp" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/short_dimen"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <ImageView
                            android:id="@+id/ivEmail"
                            android:layout_width="@dimen/medium_dimen"
                            android:layout_height="@dimen/medium_dimen"
                            android:layout_marginStart="@dimen/medium_dimen"
                            android:src="@drawable/email"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/etEmail"
                            style="@style/input_login"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/medium_dimen"
                            android:hint="@string/string_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingHorizontal="@dimen/short_dimen"
                            android:paddingVertical="@dimen/short_dimen"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/ivEmail"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/short_dimen"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <ImageView
                            android:id="@+id/ivPassword"
                            android:layout_width="@dimen/medium_dimen"
                            android:layout_height="@dimen/medium_dimen"
                            android:layout_marginStart="@dimen/medium_dimen"
                            android:src="@drawable/password"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/etPassword"
                            style="@style/input_login"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/medium_dimen"
                            android:hint="@string/string_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingHorizontal="@dimen/short_dimen"
                            android:paddingVertical="@dimen/short_dimen"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/ivPassword"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        style="@style/text_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="@dimen/short_dimen" />

                    <TextView
                        android:id="@+id/tvBtnLogin"
                        style="@style/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/short_dimen"
                        android:gravity="center"
                        android:padding="@dimen/short_dimen" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/short_dimen"
                        android:text="@string/string_or"
                        android:textSize="@dimen/medium_text_size" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivFacebook"
                            android:layout_width="@dimen/icon_social_media"
                            android:layout_height="@dimen/icon_social_media"
                            android:layout_marginEnd="@dimen/short_dimen"
                            android:src="@drawable/fb" />

                        <ImageView
                            android:id="@+id/ivGoogle"
                            android:layout_width="@dimen/icon_social_media"
                            android:layout_height="@dimen/icon_social_media"
                            android:src="@drawable/google_plus" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbLoadLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <View
        android:id="@+id/view"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_side_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/short_dimen"/>

    <ImageView
        android:id="@+id/ivBtnAddAccount"
        android:layout_width="@dimen/high_dimen"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_add_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>